# KAZI

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: plugin_loader.py
cli/: __main__.py  adapters.py  emit.py  init.py  run.py  schedule.py  serve.py  triggers.py  validate.py
docs/: architecture.md  building-agents.md  changelog.mdx  design-patterns.md  docs.json  getting-started.md  introduction.mdx  mint.json  plugins.md  quickstart.mdx  scoring-system.md  templates.md
docs/api-reference/: cli.mdx  python.mdx
docs/cloud/: destinations.mdx  overview.mdx  tenants.mdx
docs/mcp/: overview.mdx  prompts.mdx  resources.mdx  tools.mdx
docs/reports/: overview.mdx  scoring.mdx  templates.mdx
docs/workflows/: agents.mdx  manifest.mdx  overview.mdx  pipeline.mdx  triggers.mdx
domains/_template/: README.md  manifest.yaml  routes.py  scoring.yaml
examples/: README.md  hello_agent.py  notes.md  scout_score_pipeline.py
examples/marcus-chen/: .env.example  WALKTHROUGH.md  council.yaml  guardrails.yaml  identity.yaml  manifest.yaml  voice.yaml
examples/marcus-chen/templates/: linkedin_post.md  newsletter.md
mcp/: README.md  __init__.py  __main__.py  claude_desktop_config.json  server.py
site/: cloud.html  index.html  reports.html  styles.css  workflows.html
src/kazi/: __init__.py
src/kazi/agents/: __init__.py  base.py  registry.py
src/kazi/cli/: __main__.py  init.py  render.py  run.py  serve.py  tenant.py
src/kazi/delivery/: __init__.py  destinations.py  renderer.py
src/kazi/hitl/: __init__.py  processor.py
tenants/: _template.yaml  silicon-xchange.yaml
(+17 files in other folders)
